# BombermanTournament

./: .gitignore  BombermanClient_C_Sharp.sln  BombermanTournament.sln
AiExamples/: LongRunningAi.cs
AiPlayer1/: Player.cs
AiPlayer2/: Player.cs
AiPlayer3/: Player.cs
AiPlayer4/: Player.cs
BombermanBotExamples/: AiPlayer1.cs  AiPlayer2.cs  BombermanBotExamples.csproj  LongRunningAi.cs
BombermanClient_C_PlusPlus/: Bot.cpp  Bot.h  CMakeLists.txt  Client.cpp  Client.h  NCO.cpp  NCO.h  main.cpp
BombermanClient_C_PlusPlus/Core/Network.Shared/Contracts/Messages/: BaseMessage.cpp  BaseMessage.h
BombermanClient_C_PlusPlus/Core/Network.Shared/Interfaces/: INetworkClientObject.cpp  INetworkClientObject.h  INetworkObject.cpp  INetworkObject.h
BombermanClient_C_PlusPlus/Games/BombermanGame.Shared/Enums/: FieldItemEnum.h  PlayerTurnEnum.h
BombermanClient_C_PlusPlus/Games/BombermanGame.Shared/Interfaces/: IGameInfo.cpp  IGameInfo.h  IPlayer.cpp  IPlayer.h  IPlayerInfo.cpp  IPlayerInfo.h  IPositionItem.cpp  IPositionItem.h
BombermanClient_C_Sharp/: BombermanClient_C_Sharp.csproj  Bot.cs  Client.cs  Program.cs
BombermanGame/: BombermanGame.csproj  BombermanGameForm.Designer.cs  BombermanGameForm.cs
BombermanGame.Shared/: BombermanGame.Shared.csproj
Core.Network.Client/: Core.Network.Client.csproj  ImageChatClientForm.cs  ImageChatClientForm.variables.cs  NetworkClient.cs
Core.Network.InternalShared/: BaseThreadService.cs  Constants.cs  Core.Network.InternalShared.csproj  IpAddressUtility.cs  Logger.cs  SocketAsyncState.cs  TcpSocketUtility.cs
(+528 files in other folders)
